[package]
name = "kafi"
version = "0.1.1"
authors = ["robin <r@nosql.asia"]
description = "Simple persistent key value store library for Rust."
license = "MIT"
hompage = "https://github.com/anvie/kafi"
repository = "https://github.com/anvie/kafi"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
bincode = "0.9.2"

[dev-dependencies]
rand = "0.3"
