[package]
name = "kafi"
version = "0.1.2"
authors = ["robin <r@nosql.asia"]
description = "Super simple persistent key value store library for Rust."
license = "MIT"
homepage = "https://github.com/anvie/kafi"
repository = "https://github.com/anvie/kafi"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
bincode = "0.9.2"

[dev-dependencies]
rand = "0.3"
